# pybites-fastapi-template

./: README.md  main.py  pyproject.toml  test_main.py
templates/: index.html
